--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasnim</title>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    
+<header>
+    <h2 class="logo"><span class="letter">Tas</span>nim</h2>
+    <!-- Here we have created the navigation -->
+    <nav class="navigation">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
 <!-- Here we have linked the Js file -->
     <script src="/Js/script.js"></script>
 <!-- Here we have linked the Js file -->
 </body>
-
 </html>
