--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <a href="#">Contact</a>
     </nav>
 </header>
+<!-- Here we have created the main -->
+<section class="parallax">
+    <h2 id="text">Tasnim</h2>
+    <img id="leaf" src="/assets/leaf.png">
+    <img id="hill1" src="/assets/hill1.png">
+    <img id="hill4" src="/assets/hill4.png">
+    <img id="hill5" src="/assets/hill5.png">
+</section>
+<!-- Here we have created the main -->
 <!-- Here we have linked the Js file -->
     <script src="/Js/script.js"></script>
 <!-- Here we have linked the Js file -->
