--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
 </header>
 <!-- Here we have created the main -->
 <section class="parallax">
-    <h2 id="text">Tasnim</h2>
-    <img id="leaf" src="/assets/leaf.png">
     <img id="hill1" src="/assets/hill1.png">
+    <img id="hill2" src="/assets/hill2.png">
+    <img id="hill3" src="/assets/hill3.png">
     <img id="hill4" src="/assets/hill4.png">
     <img id="hill5" src="/assets/hill5.png">
+    <img id="tree" src="/assets/tree.png">
+    <h2 id="text">Tasnim</h2>
+    <img id="leaf" src="/assets/leaf.png">
+    <img id="plant" src="/assets/plant.png">
 </section>
 <!-- Here we have created the main -->
+<section class="sec">
+    <h2 class="title">About Us</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.</p>
+</section>
 <!-- Here we have linked the Js file -->
     <script src="/Js/script.js"></script>
 <!-- Here we have linked the Js file -->
