--- a/index.html
+++ b/index.html
@@ -29,14 +29,32 @@
     <img id="hill4" src="/assets/hill4.png">
     <img id="hill5" src="/assets/hill5.png">
     <img id="tree" src="/assets/tree.png">
+    <!-- put the name of anything -->
     <h2 id="text">Tasnim</h2>
+        <!-- put the name of anything -->
     <img id="leaf" src="/assets/leaf.png">
     <img id="plant" src="/assets/plant.png">
 </section>
 <!-- Here we have created the main -->
 <section class="sec">
-    <h2 class="title">About Us</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.</p>
+    <h2 >About Us</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem quod quae aliquid dolorem ullam voluptas fuga obcaecati. Architecto ipsa vero ipsam illo eius deleniti optio aspernatur rerum, sequi quaerat.<br></br>
+    </p>
 </section>
 <!-- Here we have linked the Js file -->
     <script src="/Js/script.js"></script>
