--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </p>
 </section>
 <!-- Here we have linked the Js file -->
-    <script src="/Js/script.js"></script>
+    <script src="./Js/script.js"></script>
 <!-- Here we have linked the Js file -->
 </body>
 </html>
